Fixed spacing between buttons

--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -52,7 +52,8 @@ ul.button-group.context_menu
 
   li a
     display: block
-    padding: .6rem
+    padding: .5rem
+    font-size: 1rem
 
   li a:hover
     @include linear-gradient(#385b83, #264971)
