--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -79,4 +79,4 @@
 
 @media (max-width: 600px)
   .row.panel.publicContent
-    padding-top: 4.25rem !important
+    padding-top: 1.25rem !important
